Migration from JUnit4 to JUnit5. Separation of the integration and unit tests.